# bluetrace

./: AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: app.css  app.svelte
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos.rs  main.rs
