[package]
name = "bluetrace"
version = "0.0.0"
description = "A PCB design EDA software."
authors = ["Canmi(Canmi21) <t@canmi.icu>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/canmi21/bluetrace.git"
edition = "2024"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Bluetrace"
path = "src/main.rs"

[lib]
name = "bluetrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
